suite BEM + Optimisation affichage sur different navigateurs :bug:

--- a/bistrotdupotager.html
+++ b/bistrotdupotager.html
@@ -22,29 +22,29 @@
 		</header>
 		<main>
 			<div class="background">
-				<img class="backgroundpicture" src="layout/composants/images/bistrootdupotager.jpeg">
+				<img class="background__picture" src="layout/composants/images/bistrootdupotager.jpeg">
 			</div>
 			<section class="menu">
-				<header class="menuheader">
-					<div class="menutitle">
+				<header class="menu__header">
+					<div class="menu__title">
 						Le Bistrot du potager
 					</div>
-					<div class="menuicone">
+					<div class="menu__favorite">
 						<i class="far fa-heart emptyheart"></i>
 						<i class="fas fa-heart fullheart"></i>
 					</div>
 				</header>
-				<div class="menucontainer">
-					<div class="entrées">
+				<div class="menu__container">
+					<div class="menu__entrées">
 						<h3 class="foodtitle">ENTRÉES</h3>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Soupe de fêves basques</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Soupe de fêves basques</h4>
+								<p class="foodcard__description">
 									Au piment d'Espelette
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								25€
 							</p>
 							<div class="checkcircle">
@@ -52,13 +52,13 @@
 							</div>
 						</div>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Foie gras de canard mi-cuit</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Foie gras de canard mi-cuit</h4>
+								<p class="foodcard__description">
 									À la truffe blanche
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								35€
 							</p>
 							<div class="checkcircle">
@@ -66,13 +66,13 @@
 							</div>
 						</div>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Oeuf poché</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Oeuf poché</h4>
+								<p class="foodcard__description">
 									Et sa panelure d'osso-iraty
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								20€
 							</p>
 							<div class="checkcircle">
@@ -80,16 +80,16 @@
 							</div>
 						</div>
 					</div>
-					<div class="plats">
+					<div class="menu__plats">
 						<h3 class="foodtitle">PLATS</h3>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Côte de boeuf à l'ail des ours</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Côte de boeuf à l'ail des ours</h4>
+								<p class="foodcard__description">
 									frites de patate douce
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								40€
 							</p>
 							<div class="checkcircle">
@@ -97,13 +97,13 @@
 							</div>
 						</div>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Agneau en croute</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Agneau en croute</h4>
+								<p class="foodcard__description">
 									Aux vieux légumes
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								35€
 							</p>
 							<div class="checkcircle">
@@ -111,13 +111,13 @@
 							</div>
 						</div>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Filet de bonito</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Filet de bonito</h4>
+								<p class="foodcard__description">
 									À l'orange sanguine
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								44€
 							</p>
 							<div class="checkcircle">
@@ -125,16 +125,16 @@
 							</div>
 						</div>
 					</div>
-					<div class="dessert">
+					<div class="menu__dessert">
 						<h3 class="foodtitle">DESSERTS</h3>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Gâteau basque</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Gâteau basque</h4>
+								<p class="foodcard__description">
 									Revisité
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								18€
 							</p>
 							<div class="checkcircle">
@@ -142,13 +142,13 @@
 							</div>
 						</div>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Macaron au chocolat d'exception</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Macaron au chocolat d'exception</h4>
+								<p class="foodcard__description">
 									Et glace vanille
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								22€
 							</p>
 							<div class="checkcircle">
@@ -156,13 +156,13 @@
 							</div>
 						</div>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Mousse au chocolat</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Mousse au chocolat</h4>
+								<p class="foodcard__description">
 									Au piment d'Espelette
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								23€
 							</p>
 							<div class="checkcircle">
