--- a/cozna.html
+++ b/cozna.html
@@ -22,29 +22,29 @@
 		</header>
 		<main>
 			<div class="background">
-				<img class="backgroundpicture" src="layout/composants/images/cozna.jpeg">
+				<img class="background__picture" src="layout/composants/images/cozna.jpeg">
 			</div>
 			<section class="menu">
-				<header class="menuheader">
-					<div class="menutitle">
+				<header class="menu__header">
+					<div class="menu__title">
 						Cozna
 					</div>
-					<div class="menuicone">
+					<div class="menu__favorite">
 						<i class="far fa-heart emptyheart"></i>
 						<i class="fas fa-heart fullheart"></i>
 					</div>
 				</header>
-				<div class="menucontainer">
-					<div class="entrées">
+				<div class="menu__container">
+					<div class="menu__entrées">
 						<h3 class="foodtitle">ENTRÉES</h3>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Soupe de la mer</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Soupe de la mer</h4>
+								<p class="foodcard__description">
 									et sa crème de couteau
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								25€
 							</p>
 							<div class="checkcircle">
@@ -52,13 +52,13 @@
 							</div>
 						</div>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Jardinière de légumes d'antan</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Jardinière de légumes d'antan</h4>
+								<p class="foodcard__description">
 									Butternut et panais
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								35€
 							</p>
 							<div class="checkcircle">
@@ -66,13 +66,13 @@
 							</div>
 						</div>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Tartare de veau</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Tartare de veau</h4>
+								<p class="foodcard__description">
 									et sa croziflette
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								20€
 							</p>
 							<div class="checkcircle">
@@ -80,16 +80,16 @@
 							</div>
 						</div>
 					</div>
-					<div class="plats">
+					<div class="menu__plats">
 						<h3 class="foodtitle">PLATS</h3>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Coquilles Saint-Jacques</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Coquilles Saint-Jacques</h4>
+								<p class="foodcard__description">
 									Accompagnées d'une purée de panais
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								40€
 							</p>
 							<div class="checkcircle">
@@ -97,13 +97,13 @@
 							</div>
 						</div>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Magret de canard</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Magret de canard</h4>
+								<p class="foodcard__description">
 									Et gratin dauphinois
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								35€
 							</p>
 							<div class="checkcircle">
@@ -111,13 +111,13 @@
 							</div>
 						</div>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Pigeonneau d’Ille-et-Vilaine</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Pigeonneau d’Ille-et-Vilaine</h4>
+								<p class="foodcard__description">
 									Sur son lit de gnocchis aux légumes
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								44€
 							</p>
 							<div class="checkcircle">
@@ -125,16 +125,16 @@
 							</div>
 						</div>
 					</div>
-					<div class="dessert">
+					<div class="menu__dessert">
 						<h3 class="foodtitle">DESSERTS</h3>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Sorbet de chartreuse</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Sorbet de chartreuse</h4>
+								<p class="foodcard__description">
 									Et mousse de noisettes
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								18€
 							</p>
 							<div class="checkcircle">
@@ -142,13 +142,13 @@
 							</div>
 						</div>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Fondant au chocolat</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Fondant au chocolat</h4>
+								<p class="foodcard__description">
 									à la vanille de la réunion
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								22€
 							</p>
 							<div class="checkcircle">
@@ -156,13 +156,13 @@
 							</div>
 						</div>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Millefeuille alpin</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Millefeuille alpin</h4>
+								<p class="foodcard__description">
 									Myrtilles et mûres
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								23€
 							</p>
 							<div class="checkcircle">
