--- a/index.html
+++ b/index.html
@@ -65,65 +65,67 @@
 								<span class="restaurant__legend">Nouveau</span>
 							</header>
 							<footer>
+								<div class="restaurant__info">
+								<h3 class="restaurant__title">Les apothicaires</h3>
+								<span class="restaurant__quartier">
+									Gerland
+								</span>
+								</div>	
+								<div class="restaurant__menufavorite">
+									<i class="far fa-heart emptyheart"></i>
+									<i class="fas fa-heart fullheart"></i>
+								</div>
+							</footer>
+						</a>
+					</div>
+					<div class="restaurant__cartes carte2">
+						<a class="restaurant__carteslink" href="bistrotdupotager.html">
+							<header class="restaurant__carteheader">
+								<img src="layout/composants/images/bistrootdupotager.jpeg" alt class="restaurant__carteimage"/>
+								<span class="restaurant__legend">Nouveau</span>
+							</header>
+							<footer>
 								<h3 class="restaurant__title">Le bistrot du potager</h3>
 								<div class="restaurant__quartier">
 									Gerland
 								</div>
-								<div class="restaurant__menuicone">
+								<div class="restaurant__menufavorite">
 									<i class="far fa-heart emptyheart"></i>
 									<i class="fas fa-heart fullheart"></i>
 								</div>
 							</footer>
 						</a>
 					</div>
-					<div class="restaurantcartes carte2">
-						<a class="carte" href="bistrotdupotager.html">
-							<header class="carteheader">
-								<img src="layout/composants/images/bistrootdupotager.jpeg" alt class="restaurant__carteimage"/>
-								<span class="restaurantlegend">Nouveau</span>
-							</header>
-							<footer>
-								<h3 class="restauranttitle">Le bistrot du potager</h3>
-								<div class="restaurantquartier">
-									Gerland
-								</div>
-								<div class="menuicone">
-									<i class="far fa-heart emptyheart"></i>
-									<i class="fas fa-heart fullheart"></i>
-								</div>
-							</footer>
-						</a>
-					</div>
-					<div class="restaurantcartes carte3">
-						<a class="carte" href="cozna.html">
-							<header class="carteheader">
+					<div class="restaurant__cartes carte3">
+						<a class="restaurant__carteslink" href="cozna.html">
+							<header class="restaurant__carteheader">
 								<img src="layout/composants/images/cozna.jpeg" alt class="restaurant__carteimage"/>
-								<span class="restaurantlegend">Nouveau</span>
+								<span class="restaurant__legend">Nouveau</span>
 							</header>
 							<footer>
-								<h3 class="restauranttitle">Cozna</h3>
-								<div class="restaurantquartier">
+								<h3 class="restaurant__title">Cozna</h3>
+								<div class="restaurant__quartier">
 									Sainte Claire
 								</div>
-								<div class="menuicone">
+								<div class="restaurant__menufavorite">
 									<i class="far fa-heart emptyheart"></i>
 									<i class="fas fa-heart fullheart"></i>
 								</div>
 							</footer>
 						</a>
 					</div>
-					<div class="restaurantcartes carte4">
-						<a class="carte" href="tetedoie.html">
-							<header class="carteheader">
+					<div class="restaurant__cartes carte4">
+						<a class="restaurant__carteslink" href="tetedoie.html">
+							<header class="restaurant__carteheader">
 								<img src="layout/composants/images/tetedoie.jpeg" alt class="restaurant__carteimage"/>
-								<span class="restaurantlegend">Nouveau</span>
+								<span class="restaurant__legend">Nouveau</span>
 							</header>
 							<footer>
-								<h3 class="restauranttitle">Tête d'oie</h3>
-								<div class="restaurantquartier">
+								<h3 class="restaurant__title">Tête d'oie</h3>
+								<div class="restaurant__quartier">
 									Saint George
 								</div>
-								<div class="menuicone">
+								<div class="restaurant__menufavorite">
 									<i class="far fa-heart emptyheart"></i>
 									<i class="fas fa-heart fullheart"></i>
 								</div>
