--- a/lesapothicaires.html
+++ b/lesapothicaires.html
@@ -20,29 +20,29 @@
 		</header>
 		<main>
 			<div class="background">
-				<img class="backgroundpicture" src="layout/composants/images/lesapothicaires.jpeg">
+				<img class="background__picture" src="layout/composants/images/lesapothicaires.jpeg">
 			</div>
 			<section class="menu">
-				<header class="menuheader">
-					<div class="menutitle">
+				<header class="menu__header">
+					<div class="menu__title">
 						Les apothicaires
 					</div>
-					<div class="menuicone">
+					<div class="menu__favorite">
 						<i class="far fa-heart emptyheart"></i>
 						<i class="fas fa-heart fullheart"></i>
 					</div>
 				</header>
-				<div class="menucontainer">
-					<div class="entrées">
+				<div class="menu__container">
+					<div class="menu__entrées">
 						<h3 class="foodtitle">ENTRÉES</h3>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Tomates</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Tomates</h4>
+								<p class="foodcard__description">
 									Hollandaise safran vin jaune
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								25€
 							</p>
 							<div class="checkcircle">
@@ -50,13 +50,13 @@
 							</div>
 						</div>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Langoustines au BBQ</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Langoustines au BBQ</h4>
+								<p class="foodcard__description">
 									Guanciale, haricots, crème fermière
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								20€
 							</p>
 							<div class="checkcircle">
@@ -64,13 +64,13 @@
 							</div>
 						</div>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Pigeon, zaatar, trévise</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Pigeon, zaatar, trévise</h4>
+								<p class="foodcard__description">
 									Sauce prune-myrtille
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								35€
 							</p>
 							<div class="checkcircle">
@@ -78,16 +78,16 @@
 							</div>
 						</div>
 					</div>
-					<div class="plats">
+					<div class="menu__plats">
 						<h3 class="foodtitle">PLATS</h3>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Tartare de veau</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Tartare de veau</h4>
+								<p class="foodcard__description">
 									Pata negra, asperges blanches
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								40€
 							</p>
 							<div class="checkcircle">
@@ -95,13 +95,13 @@
 							</div>
 						</div>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Omble Chevalier</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Omble Chevalier</h4>
+								<p class="foodcard__description">
 									Jus de chou
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								35€
 							</p>
 							<div class="checkcircle">
@@ -109,13 +109,13 @@
 							</div>
 						</div>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Lavare fumé</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Lavaret fumé</h4>
+								<p class="foodcard__description">
 									Et riz rouge de camargue
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								44€
 							</p>
 							<div class="checkcircle">
@@ -123,16 +123,16 @@
 							</div>
 						</div>
 					</div>
-					<div class="dessert">
+					<div class="menu__dessert">
 						<h3 class="foodtitle">DESSERTS</h3>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Biscuit café</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Biscuit café</h4>
+								<p class="foodcard__description">
 									Sorbet gingembre
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								18€
 							</p>
 							<div class="checkcircle">
@@ -140,13 +140,13 @@
 							</div>
 						</div>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Fraises</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Fraises</h4>
+								<p class="foodcard__description">
 									Crème cuite
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								22€
 							</p>
 							<div class="checkcircle">
@@ -154,13 +154,13 @@
 							</div>
 						</div>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Tarte au chocolat</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Tarte au chocolat</h4>
+								<p class="foodcard__description">
 									Sur un lit d'avocat
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								23€
 							</p>
 							<div class="checkcircle">
