--- a/tetedoie.html
+++ b/tetedoie.html
@@ -20,29 +20,29 @@
 		</header>
 		<main>
 			<div class="background">
-				<img class="backgroundpicture" src="layout/composants/images/tetedoie.jpeg">
+				<img class="background__picture" src="layout/composants/images/tetedoie.jpeg">
 			</div>
 			<section class="menu">
-				<header class="menuheader">
-					<div class="menutitle">
+				<header class="menu__header">
+					<div class="menu__title">
 						Tête d'oie
 					</div>
-					<div class="menuicone">
+					<div class="menu__favorite">
 						<i class="far fa-heart emptyheart"></i>
 						<i class="fas fa-heart fullheart"></i>
 					</div>
 				</header>
-				<div class="menucontainer">
-					<div class="entrées">
+				<div class="menu__container">
+					<div class="menu__entrées">
 						<h3 class="foodtitle">ENTRÉES</h3>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Tartare de thon</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Tartare de thon</h4>
+								<p class="foodcard__description">
 									Assaisonné au yuzu
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								25€
 							</p>
 							<div class="checkcircle">
@@ -50,13 +50,13 @@
 							</div>
 						</div>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Homard bleu</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Homard bleu</h4>
+								<p class="foodcard__description">
 									Et algues diverses
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								35€
 							</p>
 							<div class="checkcircle">
@@ -64,13 +64,13 @@
 							</div>
 						</div>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Velouté de cèpes </h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Velouté de cèpes </h4>
+								<p class="foodcard__description">
 									Aux truffes
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								20€
 							</p>
 							<div class="checkcircle">
@@ -78,16 +78,16 @@
 							</div>
 						</div>
 					</div>
-					<div class="plats">
+					<div class="menu__plats">
 						<h3 class="foodtitle">PLATS</h3>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Lapin cuit au foin</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Lapin cuit au foin</h4>
+								<p class="foodcard__description">
 									Sauce teriyaki
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								40€
 							</p>
 							<div class="checkcircle">
@@ -95,13 +95,13 @@
 							</div>
 						</div>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Langouste rôtie</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Langouste rôtie</h4>
+								<p class="foodcard__description">
 									Et ses légumes de saison
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								35€
 							</p>
 							<div class="checkcircle">
@@ -109,13 +109,13 @@
 							</div>
 						</div>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Côte de boeuf Angus</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Côte de boeuf Angus</h4>
+								<p class="foodcard__description">
 									Et sa purée de panais
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								44€
 							</p>
 							<div class="checkcircle">
@@ -123,16 +123,16 @@
 							</div>
 						</div>
 					</div>
-					<div class="dessert">
+					<div class="menu__dessert">
 						<h3 class="foodtitle">DESSERTS</h3>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Café gourmand</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Café gourmand</h4>
+								<p class="foodcard__description">
 									Du chef
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								18€
 							</p>
 							<div class="checkcircle">
@@ -140,13 +140,13 @@
 							</div>
 						</div>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Crème brulée </h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Crème brulée </h4>
+								<p class="foodcard__description">
 									À la lavande
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								22€
 							</p>
 							<div class="checkcircle">
@@ -154,13 +154,13 @@
 							</div>
 						</div>
 						<div class="foodcard">
-							<div class="foodtext">
-								<h4 class="foodcardtitle">Tiramisu</h4>
-								<p class="foodcarddescription">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Tiramisu</h4>
+								<p class="foodcard__description">
 									Speculoos-nutella
 								</p>
 							</div>
-							<p class="foodcardprice">
+							<p class="foodcard__price">
 								23€
 							</p>
 							<div class="checkcircle">
