modification de quelques elements css conformément à la maquette

--- a/index.html
+++ b/index.html
@@ -41,91 +41,91 @@
 				<h2 class="fonctionnement__title">Fonctionnement</h2>
 				<ol class="fonctionnement__etapes">
 					<li class="fonctionnement__carte">
-						<i class="fas fa-mobile-alt"></i>
+						<i class="fas fa-mobile-alt fonctionnement__icone"></i>
 						<span class="fonctionnement__texte">Choisissez un restaurant</span>
 					</li>
 					<li class="fonctionnement__carte">
-						<i class="fas fa-list-ul"></i>
+						<i class="fas fa-list-ul fonctionnement__icone"></i>
 						<span class="fonctionnement__texte">Composez votre menu</span>
 					</li>
 					<li class="fonctionnement__carte">
-						<i class="fas fa-store"></i>
+						<i class="fas fa-store fonctionnement__icone"></i>
 						<span class="fonctionnement__texte">Choisissez un restaurant</span>
 					</li>
 				</ol>
 			</section>
 			<!-- Section restaurants-->
 			<section class="restaurants">
-				<h2 class="restaurants__title">Restaurants</h2>
+				<h2 class="restaurants__headtitle">Restaurants</h2>
 				<div class="restaurants__cartecontainer">
-					<div class="restaurant__cartes carte1">
-						<a class="restaurant__carteslink" href="lesapothicaires.html">
-							<header class="restaurant__carteheader">
-								<img src="layout/composants/images/lesapothicaires.jpeg" alt class="restaurant__carteimage"/>
-								<span class="restaurant__legend">Nouveau</span>
+					<div class="restaurants__cartes carte1">
+						<a class="restaurants__carteslink" href="lesapothicaires.html">
+							<header class="restaurants__carteheader">
+								<img src="layout/composants/images/lesapothicaires.jpeg" alt class="restaurants__carteimage"/>
+								<span class="restaurants__legend">Nouveau</span>
 							</header>
 							<footer>
-								<div class="restaurant__info">
-								<h3 class="restaurant__title">Les apothicaires</h3>
-								<span class="restaurant__quartier">
+								<div class="restaurants__info">
+								<h3 class="restaurants__title">Les apothicaires</h3>
+								<span class="restaurants__quartier">
 									Gerland
 								</span>
 								</div>	
-								<div class="restaurant__menufavorite">
+								<div class="restaurants__menufavorite">
 									<i class="far fa-heart emptyheart"></i>
 									<i class="fas fa-heart fullheart"></i>
 								</div>
 							</footer>
 						</a>
 					</div>
-					<div class="restaurant__cartes carte2">
-						<a class="restaurant__carteslink" href="bistrotdupotager.html">
-							<header class="restaurant__carteheader">
-								<img src="layout/composants/images/bistrootdupotager.jpeg" alt class="restaurant__carteimage"/>
-								<span class="restaurant__legend">Nouveau</span>
+					<div class="restaurants__cartes carte2">
+						<a class="restaurants__carteslink" href="bistrotdupotager.html">
+							<header class="restaurants__carteheader">
+								<img src="layout/composants/images/bistrootdupotager.jpeg" alt class="restaurants__carteimage"/>
+								<span class="restaurants__legend">Nouveau</span>
 							</header>
 							<footer>
-								<h3 class="restaurant__title">Le bistrot du potager</h3>
-								<div class="restaurant__quartier">
+								<h3 class="restaurants__title">Le bistrot du potager</h3>
+								<div class="restaurants__quartier">
 									Gerland
 								</div>
-								<div class="restaurant__menufavorite">
+								<div class="restaurants__menufavorite">
 									<i class="far fa-heart emptyheart"></i>
 									<i class="fas fa-heart fullheart"></i>
 								</div>
 							</footer>
 						</a>
 					</div>
-					<div class="restaurant__cartes carte3">
-						<a class="restaurant__carteslink" href="cozna.html">
-							<header class="restaurant__carteheader">
-								<img src="layout/composants/images/cozna.jpeg" alt class="restaurant__carteimage"/>
-								<span class="restaurant__legend">Nouveau</span>
+					<div class="restaurants__cartes carte3">
+						<a class="restaurants__carteslink" href="cozna.html">
+							<header class="restaurants__carteheader">
+								<img src="layout/composants/images/cozna.jpeg" alt class="restaurants__carteimage"/>
+								<span class="restaurants__legend">Nouveau</span>
 							</header>
 							<footer>
-								<h3 class="restaurant__title">Cozna</h3>
-								<div class="restaurant__quartier">
+								<h3 class="restaurants__title">Cozna</h3>
+								<div class="restaurants__quartier">
 									Sainte Claire
 								</div>
-								<div class="restaurant__menufavorite">
+								<div class="restaurants__menufavorite">
 									<i class="far fa-heart emptyheart"></i>
 									<i class="fas fa-heart fullheart"></i>
 								</div>
 							</footer>
 						</a>
 					</div>
-					<div class="restaurant__cartes carte4">
-						<a class="restaurant__carteslink" href="tetedoie.html">
-							<header class="restaurant__carteheader">
-								<img src="layout/composants/images/tetedoie.jpeg" alt class="restaurant__carteimage"/>
-								<span class="restaurant__legend">Nouveau</span>
+					<div class="restaurants__cartes carte4">
+						<a class="restaurants__carteslink" href="tetedoie.html">
+							<header class="restaurants__carteheader">
+								<img src="layout/composants/images/tetedoie.jpeg" alt class="restaurants__carteimage"/>
+								<span class="restaurants__legend">Nouveau</span>
 							</header>
 							<footer>
-								<h3 class="restaurant__title">Tête d'oie</h3>
-								<div class="restaurant__quartier">
+								<h3 class="restaurants__title">Tête d'oie</h3>
+								<div class="restaurants__quartier">
 									Saint George
 								</div>
-								<div class="restaurant__menufavorite">
+								<div class="restaurants__menufavorite">
 									<i class="far fa-heart emptyheart"></i>
 									<i class="fas fa-heart fullheart"></i>
 								</div>
